# cord19-cdcs-nist

./: .gitignore  Jenkinsfile  LICENSE.rst  README.md  requirements.txt
python-interface/: README.md  pyproject.toml
python-interface/build_scripts/: data_tf.py
python-interface/cord19_cdcs/: Cur_covid_xix_metadata_schema.xsd  __init__.py
template/dataset_name_ISO_DATE/CSV/: readme.md
template/dataset_name_ISO_DATE/JSON/: readme.md
template/dataset_name_ISO_DATE/XML/: readme.md
template/dataset_name_ISO_DATE/xsl/: COVID_META_32420.xsl  COVID_META_32420_List.xsl  CSV.xsl  covd-author.xsl  covd-institution.xsl
