[tool.poetry]
name = "cord19-cdcs"
version = "0.1.1"
description = "Curated Archive for Covid-19 Research Challenge Dataset"
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
include = [
    "cord19_cdcs/cord19_cdcs.parquet/**"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
#dask = {extras = ["complete"]}
cv-py = { path = "../../cv-py"}
taskipy = "^1.2.1"

[tool.taskipy.tasks]
data-tf = "python build_scripts/data_tf.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
