[tool.poetry]
name = "cord19-cdcs"
version = "0.1.1"
description = "Curated Archive for Covid-19 Research Challenge Dataset"
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
include = [
    "cord19_cdcs/cord19_cdcs.parquet/**/*"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
cv-py = {git = "https://github.com/usnistgov/cv-py.git"}
black = "^19.10b0"

[tool.taskipy.tasks]
data-tf = "python build_scripts/data_tf.py"
format = "task format_code && task format_docs"
format_code = "black build_scripts/*.py && black cord19_cdcs/*.py"
format_docs = "black README.md"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
