[tool.poetry]
name = "cord19-cdcs"
version = "0.0.0"  # Managed by poetry-dynamic-versioning
description = "Curated Archive for Covid-19 Research Challenge Dataset"
authors = ["Thurston Sexton <thurston.sexton@nist.gov>"]
include = [
    "cord19_cdcs/cord19_cdcs.parquet/**/*"
]

[tool.poetry.dependencies]
python = "^3.6.8"
cv-py = "^0.1.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
black = "^19.10b0"
xmlschema = "^1.1.2"
ipykernel = "^5.2.1"
toolz = "^0.10.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.taskipy.tasks]
data-tf = "python build_scripts/data_tf.py"
format = "task format_code && task format_docs"
format_code = "black build_scripts/*.py && black cord19_cdcs/*.py"
format_docs = "black README.md"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


